--- a/spring/spring-source/ioc-study/pom.xml
+++ b/spring/spring-source/ioc-study/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cache-study</artifactId>
+    <artifactId>ioc-study</artifactId>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>com.zhiyin.frame</groupId>
-        <artifactId>spring-source</artifactId>
+        <artifactId>spring-study</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -18,15 +18,15 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
+            <version>4.2.5.RELEASE</version>
         </dependency>
 
     </dependencies>
